# ros-carla-msgs

./: CMakeLists.txt  Makefile  README.md  install_dependencies.sh  package.xml
.github/workflows/: ci.yml
msg/: CarlaActorAttribute.msg  CarlaActorBlueprint.msg  CarlaActorInfo.idl  CarlaActorInfo.msg  CarlaActorList.idl  CarlaActorList.msg  CarlaBoundingBox.idl  CarlaCollisionEvent.idl  CarlaControl.idl  CarlaDVSEvent.msg  CarlaDVSEventArray.msg  CarlaEgoVehicleInfo.msg  CarlaEgoVehicleInfoGear.msg  CarlaEgoVehicleInfoWheel.msg  CarlaLaneInvasionEvent.idl  CarlaRadarDetection.msg  CarlaRadarMeasurement.msg  CarlaStatus.idl  CarlaStatus.msg  CarlaTrafficLightInfo.idl  CarlaTrafficLightInfoList.idl  CarlaTrafficLightInfoList.msg  CarlaTrafficLightStatus.idl  CarlaTrafficLightStatus.msg  CarlaTrafficLightStatusList.idl  CarlaTrafficLightStatusList.msg  CarlaVehicleControl.idl  CarlaVehicleControl.msg  CarlaVehicleInfo.idl  CarlaVehicleInfo.msg  CarlaVehicleInfoWheel.idl  CarlaVehicleStatus.idl  CarlaVehicleStatus.msg  CarlaWalkerControl.idl  CarlaWalkerControl.msg  CarlaWeatherParameters.idl  CarlaWorldInfo.idl
srv/: DestroyObject.idl  DestroyObject.srv  GetActor.srv  GetBlueprints.idl  SpawnActor.srv  SpawnObject.idl  SpawnObject.srv
